[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
    package = "prance"
    package_dir = "."
    filename = "CHANGES.rst"
    directory = "changelog.d"
    title_format = "v{version}"
    issue_format = "#{issue}"
    template = "docs/towncrier_template.rst"
    underlines = ["-"]
