[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>6"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "prance/_version.py"

[tool.towncrier]
package = "prance"
package_dir = "."
filename = "CHANGES.rst"
directory = "changelog.d"
title_format = "v{version}"
issue_format = "#{issue}"
