[metadata]
name = prance
version = 0.20.2
description = Resolving Swagger/OpenAPI 2.0 and 3.0.0 Parser
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
keywords = swagger openapi parsing
author = Jens Finkhaeuser
author_email = jens@finkhaeuser.de
maintainer = Ronny Pfannschmidt
maintainer_email = opensource@ronnypfannschmidt.de
url = https://github.com/RonnyPfannschmidt/prance
license = MITNFA

[options]
packages = find:
include_package_data = True
install_requires =
    chardet~=4.0
    PyYAML~=5.3
    requests~=2.25
    six~=1.15
    semver~=2.13
zip_safe = True
python_requires = >=3.6

[options.packages.find]
exclude =
    ez_setup
    examples
    tests

[options.entry_points]
console_scripts =
    prance=prance.cli:cli [cli]

[options.extras_require]
dev =
    tox>=3.21
    bumpversion>=0.6
    pytest>=6.1
    pytest-cov>=2.11
    flake8>=3.8
    pep8-naming>=0.11
    flake8-quotes>=3.2
    flake8_docstrings>=1.5
    sphinx>=3.4
    towncrier>=19.2
icu = PyICU~=2.4
ssv = swagger-spec-validator~=2.4
osv = openapi-spec-validator>0.2,>=0.2.1
flex = flex~=6.13
cli = click~=7.0

[bumpversion]
current_version = 0.20.2
commit = True
tag = True

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --cov=prance --cov-report=term-missing --cov-fail-under=90
testpaths = tests
markers =
    requires_network: Marks test as requiring network connections (deselect with '-m "not requires_network"')


[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,old,build,dist,.eggs,
    ENV,lib,
    .tox
ignore =
    E111,E114,E128,E121,
    E251,
    E402,
    E401,
    N807.
    W503
max-line-length = 88
show-source = True
doctests = True
