[metadata]
name = prance
description = Resolving Swagger/OpenAPI 2.0 and 3.0.0 Parser
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
keywords = swagger openapi parsing
author = Jens Finkhaeuser
author_email = jens@finkhaeuser.de
maintainer = Ronny Pfannschmidt
maintainer_email = opensource@ronnypfannschmidt.de
url = https://github.com/RonnyPfannschmidt/prance
license = MITNFA

[options]
packages = find:
include_package_data = True
install_requires =
    setuptools>=75.8.0 
    chardet>=5.2
    ruamel.yaml>=0.18.10
    requests>=2.32.3
    six~=1.17
    packaging>=24.2
zip_safe = True
python_requires = >=3.10

[options.packages.find]
exclude =
    ez_setup
    examples
    tests

[options.entry_points]
console_scripts =
    prance=prance.cli:cli [cli]

[options.extras_require]
dev =
    tox>=4.23.2
    bumpversion>=0.6.0
    pytest>=8.3.4
    pytest-cov>=6.0
    sphinx>=8.1.3
    towncrier>=24.8
icu = PyICU~=2.14
ssv = swagger-spec-validator~=3.0.4
osv = openapi-spec-validator~=0.7.1
flex = flex~=6.14.1
cli = click>=8.1.8

[bumpversion]
current_version = 0.20.2
commit = True
tag = True

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --cov=prance --cov-report=term-missing --cov-fail-under=89
testpaths = tests
markers =
    requires_network: Marks test as requiring network connections (deselect with '-m "not requires_network"')


[flake8]
inline_quotes = double
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,old,build,dist,.eggs,
    ENV,lib,.tox,
    prance/_version.py


max-line-length = 88
show-source = True
doctests = True
